@@ -172,6 +172,9 @@ NEW FEATURES
 	(and for compatibility with exponentials).  Calls which use
 	positional matching may need to be altered.
 
+    o   readChar() now returns what is available if fewer characters
+	than resquested are on the file.
+
 
 
 BUG FIXES
@@ -190,7 +193,7 @@ BUG FIXES
     o	file.append() was opening all files in text mode: mattered
 	on Windows and classic Macintosh. (PR#1085)
 
-    o   f[] <- g  now works for factor f
+    o   f[] <- g  now works for factor f.
 
     o   substr<- was misbehaving if the replacement was too short.
 
